[project]
name = "ezlaunch"
version = "2.0.0-alpha"
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"},
]
description = "Programs for managing job submission through Slurm."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["HPC", "Slurm"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
]

[project.urls]
Repository = "https://github.com/mortonne/ezlaunch.git"

[project.scripts]
ezlaunch = "ezlaunch:launch"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
